home page gap issue

--- a/css/new_integration.css
+++ b/css/new_integration.css
@@ -15,7 +15,7 @@
 
 
 .sitem02-wrap,.sitem03-wrap,.sitem04-wrap , .sitem05-wrap , .sitem06-wrap , .sitem07-wrap{
-  padding-bottom: 70px;
+  padding-bottom: 100px;
 }
 
 
